objects/Strategic_Opportunity_Junction__c.object
<CustomObject>
    <description>Junction Object for Strategic and Opportunity</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Related_Opportunities2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Strategic_Initiative__c</fullName>
        <label>Strategic Initiative</label>
        <referenceTo>Strategic_Initiative__c</referenceTo>
        <relationshipName>Related_Opportunities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Opportunities</label>
    <nameField>
        <displayFormat>ROP-{000}</displayFormat>
        <label>Related Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>